# pymaftools

./: .gitignore  AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  DATA_SOURCES.md  LICENSE  MANIFEST.in  Makefile  PLOTTING_REVIEW.md  README.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  ROADMAP.md  deploy.sh  maf_utils.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py
.claude/skills/pymaftools/: SKILL.md
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: Makefile  conf.py  getting_started.rst  index.rst  oncoplot.rst  pivottable.rst
docs/api/: core.rst  io.rst  model.rst  plot.rst  utils.rst
pyMAF/: maf_plots.py
pyMAFtools/: maf_utils.py
pymaftools/: CooccurMatrix.py  MAF.py  PivotTable.py  __init__.py  datasets.py  llm.py  maf_plots.py  maf_utils.py
pymaftools/core/: CNV.py  CancerCellFractionTable.py  Clustering.py  Cohort.py  CopyNumberVariationTable.py  ExpressionTable.py  MAF.py  PairwiseMatrix.py  PivotTable.py  SignatureTable.py  SmallVariationTable.py  VCF.py  __init__.py  _atomic.py  pivot_filtering.py  pivot_frequency.py  pivot_io.py  pivot_sorting.py  pivot_stats.py  variant_groups.py
pymaftools/data/: ensembl_gene_sizes.tsv  example_multisample.maf  example_single_sample.maf
pymaftools/io/: __init__.py  tcga.py  tcga_readers.py
pymaftools/io/tcga/: __init__.py  base.py  client.py  clinical.py  cnv_gene.py  cnv_segment.py  expression.py  mapping.py  methylation.py  mutation.py
pymaftools/io/vcf/: __init__.py  parsers.py  record.py
pymaftools/model/: ModelPlot.py  StackingModel.py  modelUtils.py
pymaftools/plot/: BasePlot.py  ColorManager.py  CopyNumberVariationTablePlot.py  ExpressionTablePlot.py  FontManager.py  LegendManager.py  LollipopPlot.py  MafPlot.py  MethodsPlot.py  ModelPlot.py  OncoPlot.py  PivotStatsPlot.py  PivotTablePlot.py  SignatureTablePlot.py  SmallVariationTablePlot.py  Track.py  __init__.py  style.py  wes.py
pymaftools/utils/: __init__.py  geneinfo.py  geneset.py  reduction.py
scripts/: build_cohort.py  demo_exon_size_grouping.py  demo_oncoplot.py  demo_tcga_readers.py  download_centromeres.py  download_demo_samples.py  download_gene_sizes.py  download_gene_sizes_rest.py  extract_release_notes.py  render_bartrack_review.py
tests/: __init__.py  conftest.py  test_datasets.py  test_release_notes.py  test_run_tests.py
tests/core/: test_clustering.py  test_clustering_stability.py  test_cohort.py  test_deprecations.py  test_expression_table.py  test_maf.py  test_pairwise_matrix.py  test_pivot_table.py  test_plot_accessors.py
tests/io/: test_tcga.py  test_tcga_builders.py  test_tcga_readers.py  test_vcf.py
tests/model/: test_model_utils.py  test_stacking_model.py
tests/plot/: test_bartrack.py  test_oncoplot.py  test_plotting.py  test_wes_plots.py
tests/utils/: test_geneinfo.py  test_geneset.py  test_reduction.py
