[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymaftools"
version = "0.2.3"
description = "Python package for handling and analyzing Mutation Annotation Format (MAF) files."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
  { name = "xu62u4u6", email = "199928ltyos@gmail.com" }
]

dependencies = [
  "pandas>2.0",
  "numpy",
  "networkx",
  "matplotlib",
  "seaborn",
  "statannotations",
  "scikit-learn",
  "statsmodels",
  "scipy",
  "requests",
  "beautifulsoup4",
  "tqdm"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0"
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0", 
  "pytest-mock>=3.10.0",
  "build",
  "twine"
]

[project.urls]
Homepage = "https://github.com/xu62u4u6/pymaftools"

[tool.setuptools.packages.find]
where = ["."] 
include = ["pymaftools*"]
exclude = ["tests*"]
